Closed
Bug 314602
Opened 20 years ago
Closed 20 years ago
[10.4] Bookmark Bar is ugly (doesn't match unified toolbar/title bar)
Categories
(Camino Graveyard :: Bookmarks, defect)
Tracking
(Not tracked)
VERIFIED
FIXED
Camino1.0
People
(Reporter: luboshiq, Assigned: mark)
Details
(Keywords: verified1.8)
Attachments
(10 files, 2 obsolete files)
|
116.76 KB,
image/png
|
Details | |
|
117.67 KB,
image/png
|
Details | |
|
152.33 KB,
image/png
|
Details | |
|
29.28 KB,
image/jpeg
|
Details | |
|
37.82 KB,
image/png
|
Details | |
|
17.76 KB,
patch
|
sfraser_bugs
:
review+
|
Details | Diff | Splinter Review |
|
226.44 KB,
image/png
|
Details | |
|
222.16 KB,
image/png
|
Details | |
|
37.01 KB,
image/png
|
Details | |
|
22.92 KB,
image/png
|
Details |
User-Agent: Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.8b4) Gecko/20050914 Camino/1.0a1
Build Identifier: Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.8b4) Gecko/20050914 Camino/1.0a1
I dont't like how bookmark bar looks like. I think it should have the same "metal" color as toolbar. It looks inconsistend.
Reproducible: Always
Comment 1•20 years ago
|
||
I *know* this is a dupe but I sure as heck can't find the bug it's a dupe of. I swear someone filed this and it got marked for "future", but damned if I can find anything about "unified" or "bookmark bar" that looks like this bug.
cl
Comment 2•20 years ago
|
||
I don't think this is a dupe, but Smokey, please dupe it if you find it. We had discussed changing it, but I don't think a bug was ever filed. I should note that this can't be the same on all platforms. It needs to only be true for Tiger otherwise other platforms may look ugly.
Confirming as a RFE... Should this be in 1.0 as it's a legitimate UI change?
Status: UNCONFIRMED → NEW
Ever confirmed: true
Flags: camino1.0?
Updated•20 years ago
|
Severity: trivial → minor
I'm pretty sure once Stuart mentioned it was going to need a code change rather than just a nib change, the "this should be a easy/quick fix" faction in the forums lost interest, and no bug was ever filed to my knowledge :-)
It doesn't bother me since it's right on 10.3 (and I assume 10.2), but it does look pretty bad in the screenshots Jasper is prepping for the 1.0 release website.
*Can* we fix it to be right on 10.4 without making it look out of place on 10.2 and 10.3? If so, I think it really should block 1.0.
Summary: Bookmark Bar is ugly → [10.4] Bookmark Bar is ugly (doesn't match rest of toolbar)
Comment 4•20 years ago
|
||
Mento mentioned that we could specify a 10.4-only graphic if we wanted. It'd probably need to be a single solid color (whatever the last color of the gradient from the unified look is). In addition, if we do this, we'll need to make sure it's *only* for 10.4 and not for 10.4+ as Apple could change how the unified look looks, causing us to be even uglier. ;)
That said, Jasper, can you do a mockup with a solid color bookmark bar (preserving the line beneath the toolbar, I'd assume) so we can see what that'd look like? Ideally, it shouldn't make the tab bar look out of place either. Those can be themed fairly easily though. :)
| Assignee | ||
Comment 5•20 years ago
|
||
Tested on 10.4.2 and 10.3.9.
Assignee: mikepinkerton → mark
Status: NEW → ASSIGNED
Attachment #202195 -
Flags: review?(mikepinkerton)
| Assignee | ||
Updated•20 years ago
|
Flags: camino1.0? → camino1.0+
Summary: [10.4] Bookmark Bar is ugly (doesn't match rest of toolbar) → [10.4] Bookmark Bar is ugly (doesn't match unified toolbar/title bar)
Target Milestone: --- → Camino1.0
Version: unspecified → 1.8 Branch
| Assignee | ||
Comment 6•20 years ago
|
||
She's got the look, she's got the look, and I go la la la la la she's got the look
| Assignee | ||
Comment 7•20 years ago
|
||
This is the appearance on 10.4 with the window active. 10.4 with the window inactive and pre-10.4 will continue to look as they currently do.
| Assignee | ||
Comment 8•20 years ago
|
||
| Assignee | ||
Comment 9•20 years ago
|
||
Comment on attachment 202195 [details] [diff] [review]
Match the unified toolbar
Needs this diff in application/MainController.h
// OS feature checks
++ (BOOL)isTigerOrHigher;
+ (BOOL)supportsSpotlight;
+ (BOOL)supportsBonjour;
Comment 10•20 years ago
|
||
I just looks too flat, heavy and dark to me:
http://www.smfr.org/misc/bmbar.html
and the change from the light stripes to the darker solid on window activation is very distracting.
(In reply to comment #10)
> I just looks too flat, heavy and dark to me:
Which was my complaint about Unified in the first place, based on the screenshots I saw ;)
Is it possible to make the bookmarks bar a gradient that starts with the color of the bottom of the toobar (so it matches there) and then lightens up again?
That might address part of Simon's concern (and help match the BM Bar back to the color of the active tab like it's supposed to be; in these screenshots, the BM Bar matches the inactive tabs and you don't get that connection that Jasper wrote about in his essays).
| Assignee | ||
Comment 12•20 years ago
|
||
| Assignee | ||
Comment 13•20 years ago
|
||
Attachment #202295 -
Flags: review?
| Assignee | ||
Comment 14•20 years ago
|
||
Comment on attachment 202195 [details] [diff] [review]
Match the unified toolbar
I like the gradient better. Simon's, are you happy with it with your six-line bookmark orgy?
Attachment #202195 -
Attachment is obsolete: true
Attachment #202195 -
Flags: review?(mikepinkerton)
| Assignee | ||
Comment 15•20 years ago
|
||
Comment on attachment 202295 [details] [diff] [review]
Patch to achieve BM nirvana
"Simon's"...I was talking to Simon's Camino, of course.
Attachment #202295 -
Flags: review? → review?(sfraser_bugs)
Comment 16•20 years ago
|
||
+ if(
if<space>( please ;)
++ (BOOL)isTigerOrHigher;
rather than exposing this, I'd prefer to see a separate method exposing a feature check instead of an OS version check, like the bonjour/spotlight checks below it. Sure, it boils down to a version check, but the callers shouldn't be aware of that.
+ BookmarkToolbar* bookmarkToolbar = [self bookmarkToolbar];
+ if (bookmarkToolbar)
+ [bookmarkToolbar setNeedsDisplay:YES];
won't this cause a redraw on all OS versions? no need on < 10.4. Also, this will cause a redraw even if the user hacks the nibs to turn off unified apperance on Tiger.
Comment 17•20 years ago
|
||
(In reply to comment #12)
> Created an attachment (id=202294) [edit]
> Pic this gradientified BM bar
I hate to be a wet blanket, but IMO the gradient is a little too dramatic. That is, it lightens too quickly. How's it look if we just take the menu bar portion of a unified window and flip it in the horizontal plane?
cl
Comment 18•20 years ago
|
||
This is just an idea?
Comment 19•20 years ago
|
||
Screenshots at <http://www.smfr.org/misc/bmbar.html>
I think it actually looks better with the lighter gray at the top.
Comment 20•20 years ago
|
||
GradientInterpolate() gets called about 4000 times per toolbar draw, to it should be optimized. I'd suggest removing the loop and the statics, and passing in the endpoints via *inInfo.
I also wonder if it might not be better to make a thin gradient image, and use the built-in tiling ([NSColor colorWithPatternImage:]) to draw it.
Comment 21•20 years ago
|
||
The reason why I would go with the dark on top is that visually it ensures that the toolbar and the tab bar are the most important as the bm bar is pushed gently to the back. If you do it with the light on top the bm bar will be much more visually in front creating what I would call clutter as it starts fighting with the tool and tab bar for attention.
One of the points Japser makes in his tab essay (and elsewhere) is about the problem of the artificial separation of the toolbar, BM bar, tab bar, and content, and one of the ways to solve that was with the color flow/continuity. On 10.3, the toolbar, the BM bar, and the *active* tab widget are all roughly the same color (no gradients!), indicating visually that they're all connected and that operations in the toolbars affect the content and vice versa.
Apple's gradient in the Unified Toolbar has screwed all of that up; the dark bit at the bottom is (AFAICT) very close to the color of the inactive tabs, which are not at all connected (logically) to the toolbar(s). (The default state on 10.4 is even more a mess, since the active tab is connected to the BM bar visually but both are very separated visually from the main toolbar by the dark bottom of the Unified style).
Mark's version 2 and Jasper's "idea?" (I can't tell that much difference between them in the screenshots, since neither have many bookmarks, but Jasper's looks a hint better) restore that visual connection/continuity--as far as it is possible with Unified--by making the lower end of the BM bar gradient match the active tab, thereby again visually connecting the two, and by then fading the top of the BM bar back into the color at the bottom of the Unified Toolbar, thereby fixing that visual link. Neither one is perfect, but at least they're connecting the toolbars to the *active* tab instead of the inactive one.
I agree with Jasper that Simon's "Light top, dark bottom" is a bit jarring and pulls the BM bar "out", drawing the user's eye--and breaking the flow; now you've got three separate bars again: there's the Unified Toolbar (light to dark), then you start over again with a light->dark BM Bar, and then the tabs. And by ending the BM Bar on a dark color, you're linking the actions of that toolbar (visually) with the inactive tabs rather than with the active one (on which the BM Bar *does* operate).
Anyway...FWIW. Sorry for the long-winded discourse.
Comment 23•20 years ago
|
||
i think "light top, dark bottom" looks best in the zany 6-line-bar case, but it's very very jarring for the "normal" single line case. I'm ok with the multiline case not looking *perfect* to get the best look for the single-line case.
| Assignee | ||
Comment 24•20 years ago
|
||
Jasper suggested doing the gradient only for the first row of bookmarks, and using the light color for subsequent rows. That would look like attachment 202294 [details] for single-row bars and like THIS attachment for multi-row bars.
Comment 25•20 years ago
|
||
The problem is that the dark-top/light-bottom variants don't look correct from a lighting perspective. They look bottom-lit, which is contrary to the rest of the UI (which has a single light source at the center top).
I'm not sure we can get an ideal look with a flat gradient. Is the toolbar using a flat gradient? I think we need something that makes the BM bar look like it has a gentle curve, but not too pillowy.
| Assignee | ||
Updated•20 years ago
|
Attachment #202295 -
Flags: review?(sfraser_bugs)
| Assignee | ||
Comment 26•20 years ago
|
||
I spent a lot of time with the gradient from attachment 202381 [details] and decided I hated it. This, once again, is the gradient from attachment 202294 [details]. The patch has been reorganized to move some methods into NSWorkspace per discussion with pink, to avoid redrawing the toolbar when the unified appearance is not in effect, and to avoid wasting cycles in the interpolation callback.
One problem I noticed as I was wrapping this up was that the unified look disappears when the modal "you've got a bunch of tabs open, do you really want to quit?" window shows up, but the window never takes a |windowDidResignMain:| notification so the gradient remains on the bookmarks bar. |windowDidResignKey:| is the wrong thing to do, because the unified look still remains when the window sprouts a sheet. Simon, any ideas for handling this case?
Attachment #202295 -
Attachment is obsolete: true
| Assignee | ||
Comment 27•20 years ago
|
||
| Assignee | ||
Comment 28•20 years ago
|
||
Comment 29•20 years ago
|
||
(In reply to comment #28)
> Created an attachment (id=203594) [edit]
> Light top, dark bottom
Per Simon's comment 25, I greatly prefer this one over the previous.
cl
| Assignee | ||
Comment 30•20 years ago
|
||
(In reply to comment #26)
> One problem I noticed as I was wrapping this up was that the unified look
> disappears when the modal "you've got a bunch of tabs open, do you really want
> to quit?" window shows up
The title bar and toolbar don't revert to the striped appearance in this case, but to a flatter light look. It blends well with the light-top bookmarks bar. This is a picture of what the window looks like with an app-modal dialog up (the dialog isn't present in this picture).
| Assignee | ||
Comment 31•20 years ago
|
||
Comment on attachment 203562 [details] [diff] [review]
Rearranged, gradient across the entire BM bar again
(In reply to comment #25)
> The problem is that the dark-top/light-bottom variants don't look correct from
> a lighting perspective. They look bottom-lit, which is contrary to the rest of
> the UI (which has a single light source at the center top).
I like the look of the light-top variant, which is this patch with the values swapped.
> I'm not sure we can get an ideal look with a flat gradient. Is the toolbar
> using a flat gradient?
Eyedropper tool says so.
Attachment #203562 -
Flags: review?(sfraser_bugs)
Comment 32•20 years ago
|
||
Comment on attachment 203562 [details] [diff] [review]
Rearranged, gradient across the entire BM bar again
r=me for light-top variant.
Attachment #203562 -
Flags: review?(sfraser_bugs) → review+
| Assignee | ||
Comment 33•20 years ago
|
||
Checked in the light-top variant on the trunk and 1.8 branch.
| Assignee | ||
Comment 34•20 years ago
|
||
(as checked in)
Comment 35•20 years ago
|
||
Now the bookmark bar looks ugly when Aqua or Metal is used, this is not an adaquate fix. The bookmark bar need to match the window style no matter which window style is selected.
Comment 36•20 years ago
|
||
No, this patch only affects appearence under the unified look. It looks exactly the way it used to if you use the standard Aqua appearance, and it only looks wrong in textured (metal) mode if you don't turn unified off before you turn on metal.
Comment 37•20 years ago
|
||
(In reply to comment #36)
> No, this patch only affects appearence under the unified look. It looks exactly
> the way it used to if you use the standard Aqua appearance, and it only looks
> wrong in textured (metal) mode if you don't turn unified off before you turn on
> metal.
It sounds liek you guys are hacking your nibs to change the appearance. We don't support that.
Updated•20 years ago
|
Status: RESOLVED → VERIFIED
Keywords: fixed1.8 → verified1.8
You need to log in
before you can comment on or make changes to this bug.
Description
•