Bug 314602, Bookmark toolbar doesn't match unified title bar and toolbar on Tiger.  When the unified appearance is in effect, draw a matching background for the bookmark toolbar: a vertical gradient with a light top and a darker bottom.  Also moves OS feature-check utilities from MainController to NSWorkspace.  Camino-only, npotdb.  r=smfr