camino/src/browser/BrowserWindow.h
@@ -59,4 +59,7 @@
 // scripting
 - (NSString*)getURL;
 
+// look and feel
+- (BOOL)hasUnifiedToolbarAppearance;
+
 @end
