camino/src/extensions/NSWorkspace+Utils.h
@@ -51,5 +51,10 @@
 - (NSString*)identifierForBundle:(NSURL*)inBundleURL;
 - (NSString*)displayNameForFile:(NSURL*)inFileURL;
 
+// OS feature checks
++ (BOOL)supportsBonjour;
++ (BOOL)supportsSpotlight;
++ (BOOL)supportsUnifiedToolbar;
+
 @end
 
